[project]
name = "scylla"
description = "ScyllaDB Documentation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pygments>=2.18.0",
    "redirects_cli>=0.1.3",
    "sphinx-scylladb-theme>=1.9.1",
    "sphinx-sitemap>=2.9.0",
    "sphinx-autobuild>=2025.08.25",
    "sphinx>=9.0",
    "sphinx-multiversion-scylla>=0.3.7",
    "sphinxcontrib-datatemplates>=0.9.2",
    "sphinx-scylladb-markdown>=0.1.4",
    "sphinx_collapse>=0.1.3",
]

[tool.uv]
package = false
